# QuizCraft

./: .gitignore  README.md  pyproject.toml
backend/quizcraft/: __init__.py  config.py  db.py  dependencies.py  main.py
backend/quizcraft/models/: __init__.py  document.py  flashcard.py  quiz.py  setting.py
backend/quizcraft/routers/: __init__.py  documents.py  (+5 more)
backend/tests/: _pdf_helper.py  conftest.py  test_answer_api.py  test_app.py  test_chunker.py  test_cors.py  test_documents_api.py  test_e2e_integration.py  test_fill_blank.py  test_flashcards_api.py  test_interleave.py  test_llm.py  test_llm_runtime_config.py  test_models.py  test_parsing_pdf.py  test_questions_api.py  test_questions_preview_api.py  test_quiz_api.py  test_quiz_feedback.py  test_quiz_generator.py  test_quiz_prompts.py  test_settings_api.py  test_settings_connection.py  test_settings_crypto.py  test_settings_store.py  test_short_answer.py  test_tokens.py
docs/: DESIGN_DECISIONS.md  PRD_PHASE1.md  PRD_PHASE2.md  PRD_PHASE3.md  PRD_PHASE4.md
docs/agents/: agent-readiness.md  issue-tracker.md  tdd-issue-split.md  triage-labels.md
docs/plans/: SLICE_PHASE_1.md  SLICE_PHASE_2.md  SLICE_PHASE_3.md  SLICE_PHASE_4.md
docs/progress/: ISSUE_16.md  ISSUE_17.md  ISSUE_18.md  ISSUE_19.md  ISSUE_20.md  ISSUE_21.md  ISSUE_22.md  QUIZCRAFT_RALPH.md  SLICE_1_1.md  SLICE_1_2.md
frontend/: package-lock.json  package.json
research/: 00_cost_summary.md  01_competitors_document_quiz.md  02_flashcard_spaced_repetition.md  03_terminal_learning_platforms.md  04_learning_science.md  05_document_parsing_tech.md
(+41 files in other folders)
